syntax = "proto3";

import "google/protobuf/struct.proto";

package worker;

message StartJobRequest {
  string jobId = 1;
}

message CancelJobRequest {
  string jobId = 1;
}

message CancelJobResponse {
  bool success = 1;
}

enum JobEventType {
  STATUS_CHANGE = 0;
  RESULT_UPDATE = 1;
  LOG = 2;
}

enum JobStatus {
  UNKNOWN = 0;
  STARTED = 1;
  RUNNING = 2;
  COMPLETED = 3;
  CANCELLED = 4;
  FAILED = 5;
}

enum LogType {
  INFO = 0;
  WARN = 1;
  ERROR = 2;
}

message LogEvent {
  LogType type = 1;
  string message = 2;
}

message JobEvent {
  string jobId = 1;
  JobEventType type = 2;
  oneof event {
    JobStatus status = 3;
    LogEvent log = 4;
    google.protobuf.Struct payload = 5;
  }
}

service WorkerService {
  rpc StartJob (StartJobRequest) returns (stream JobEvent);
  rpc CancelJob (CancelJobRequest) returns (CancelJobResponse);
}
